# music-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.forgejo/workflows/: deploy.yml  github-sync.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-wrong-match.yml  3-feature-request.yml  config.yml
.github/workflows/: docker-publish.yml  release.yml  tests.yml
docs/: api.md  architecture.md  download-resilience.md  local-upload-plan.md  slow-source-recovery.md  source-selection.md
slskd-config/: slskd.yml
src/: bot.py  config.py  inline.py  journal.py  monochrome.py  navidrome.py  reporting.py  retagger.py  upload_import.py  upload_web.py  uploads.py
src/metadata/: __init__.py  api.py  client.py  deezer.py  lastfm.py  resolver.py
src/soulseek/: __init__.py  client.py  downloader.py  matcher.py  scorer.py  selection.py
src/tidal/: __init__.py  client.py  downloader.py  files.py  metadata.py  tagger.py
tests/: conftest.py  test_downloader.py  test_journal.py  test_matcher.py  test_reporting.py  test_resume.py  test_safe_edit.py  test_search_pacing.py  test_selection.py  test_selection_characterization.py  test_slow_source_characterization.py  test_slow_source_policy.py  test_upload_import.py  test_upload_web.py  test_uploads.py
