[project]
name = "music-bot"
version = "0.1.0"
description = "Telegram bot for Soulseek music downloads via slskd"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "aiohttp>=3.14",
    "mutagen>=1.47",
    "python-dotenv>=1.0",
    "slskd-api>=0.1.4",
]

[tool.uv]
package = false
