[project]
name = "music-bot"
version = "2.2.0"
description = "Telegram bot for Soulseek music downloads via slskd"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "aiohttp>=3.14",
    "mutagen>=1.47",
    "python-dotenv>=1.0",
    "slskd-api>=0.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
